--- a/report/loan-analysis-results.html
+++ b/report/loan-analysis-results.html
@@ -72,14 +72,14 @@ ul.task-list li input[type="checkbox"] {
 
 <section id="results-discussion" class="level1">
 <h1>Results &amp; Discussion</h1>
-<section id="model-testing" class="level2">
-<h2 class="anchored" data-anchor-id="model-testing">Model Testing</h2>
+<section id="model-testing" class="level4">
+<h4 class="anchored" data-anchor-id="model-testing">Model Testing</h4>
 </section>
-<section id="accuracy-score" class="level2">
-<h2 class="anchored" data-anchor-id="accuracy-score">Accuracy Score</h2>
+<section id="accuracy-score" class="level4">
+<h4 class="anchored" data-anchor-id="accuracy-score">Accuracy Score</h4>
 </section>
-<section id="confusion-matrix" class="level2">
-<h2 class="anchored" data-anchor-id="confusion-matrix">Confusion Matrix</h2>
+<section id="confusion-matrix" class="level4">
+<h4 class="anchored" data-anchor-id="confusion-matrix">Confusion Matrix</h4>
 <div id="fig-confusion_matrix_png" class="quarto-float quarto-figure quarto-figure-center anchored">
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-confusion_matrix_png-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
@@ -92,10 +92,10 @@ Figure&nbsp;1: Confusion Matrix
 </div>
 <p>Based on the confusion matrix, we can derive several key performance metrics for our loan eligibility prediction model. The model correctly predicted 18 loan denials and 81 loan approvals. The model incorrectly predicted 20 loan denials as approvals (false positives) and 4 loan approvals as denials (false negatives). From this, we can see that the model is better at predicting approvals than denials. Depending on the business context, we may prefer to minimize the false negatives to avoid losing out on potential customers who would have been approved for loans. But, we also need to consider the cost of false positives and minimizing the number of bad loans approved.</p>
 </section>
-<section id="classification-report" class="level2">
-<h2 class="anchored" data-anchor-id="classification-report">Classification Report</h2>
-<div id="686a7057" class="cell" data-execution_count="3">
-<div class="cell-output cell-output-display cell-output-markdown" data-execution_count="3">
+<section id="classification-report" class="level4">
+<h4 class="anchored" data-anchor-id="classification-report">Classification Report</h4>
+<div id="c50e0659" class="cell" data-execution_count="3">
+<div class="cell-output cell-output-display cell-output-markdown" data-execution_count="6">
 <table class="caption-top table table-sm table-striped small">
 <colgroup>
 <col style="width: 5%">
@@ -160,8 +160,8 @@ Figure&nbsp;1: Confusion Matrix
 </div>
 <p>From the classification report, we can see that the false precision is 0.82. Meaning that when the model predicts a loan will be denied, it is correct 82.0% of the time. The recall is 0.47, meaning that the model correctly identifies 47% of all actual loan denials. The true precision is 0.80, meanin gthat when the model predicts a loan will be apporved, it is correct 80% of the time. The recall is 0.95, meaning that the model correctly identifies 95% of all actual loan approvals. From the weighted average column, we can see the overall accuracy of the model is 0.80, meaning that the model correctly predicts loan eligibility 80% of the time.</p>
 </section>
-<section id="precision-recall-curve" class="level2">
-<h2 class="anchored" data-anchor-id="precision-recall-curve">Precision Recall Curve</h2>
+<section id="precision-recall-curve" class="level4">
+<h4 class="anchored" data-anchor-id="precision-recall-curve">Precision Recall Curve</h4>
 <div id="fig-precision_recall" class="quarto-float quarto-figure quarto-figure-center anchored">
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-precision_recall-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
@@ -174,8 +174,8 @@ Figure&nbsp;2: Precision-Recall Curve
 </div>
 <p>From the precision-recall curve, we can see that as we increase the recall, the precision remains high. The AP score is 0.87. This indicates good performance of the model in identifying loan approvals.</p>
 </section>
-<section id="roc-curve" class="level2">
-<h2 class="anchored" data-anchor-id="roc-curve">ROC Curve</h2>
+<section id="roc-curve" class="level4">
+<h4 class="anchored" data-anchor-id="roc-curve">ROC Curve</h4>
 <div id="fig-roc" class="quarto-float quarto-figure quarto-figure-center anchored">
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-roc-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
@@ -188,9 +188,9 @@ Figure&nbsp;3: ROC Curve
 </div>
 <p>We can see from the ROC curve and the AUC score of 0.80 that the model has good ability to distinguish between approved and denied loan applications. The score suggests that while the model is effective at distinguishing between the two classes, there is still room for improvement for its predictive performance.</p>
 </section>
-<section id="references" class="level2">
-<h2 class="anchored" data-anchor-id="references">References</h2>
 </section>
+<section id="references" class="level1">
+<h1>References</h1>
 </section>
 
 </main>
