Update loan analysis report with accuracy score and performance metrics

--- a/report/loan-analysis-results.html
+++ b/report/loan-analysis-results.html
@@ -6,7 +6,6 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="author" content="Justin, Ali, Tanav, Gurleen">
 
 <title>Loan Eligibility Prediction - Results</title>
 <style>
@@ -77,6 +76,7 @@ ul.task-list li input[type="checkbox"] {
 </section>
 <section id="accuracy-score" class="level4">
 <h4 class="anchored" data-anchor-id="accuracy-score">Accuracy Score</h4>
+<p>The accuracy score of the model is 0.8. This means that the model correctly predicts loan eligibility 80.0% of the time.</p>
 </section>
 <section id="confusion-matrix" class="level4">
 <h4 class="anchored" data-anchor-id="confusion-matrix">Confusion Matrix</h4>
@@ -94,8 +94,8 @@ Figure&nbsp;1: Confusion Matrix
 </section>
 <section id="classification-report" class="level4">
 <h4 class="anchored" data-anchor-id="classification-report">Classification Report</h4>
-<div id="c50e0659" class="cell" data-execution_count="3">
-<div class="cell-output cell-output-display cell-output-markdown" data-execution_count="6">
+<div id="c9e0c83b" class="cell" data-execution_count="3">
+<div class="cell-output cell-output-display cell-output-markdown" data-execution_count="20">
 <table class="caption-top table table-sm table-striped small">
 <colgroup>
 <col style="width: 5%">
@@ -158,7 +158,7 @@ Figure&nbsp;1: Confusion Matrix
 </table>
 </div>
 </div>
-<p>From the classification report, we can see that the false precision is 0.82. Meaning that when the model predicts a loan will be denied, it is correct 82.0% of the time. The recall is 0.47, meaning that the model correctly identifies 47% of all actual loan denials. The true precision is 0.80, meanin gthat when the model predicts a loan will be apporved, it is correct 80% of the time. The recall is 0.95, meaning that the model correctly identifies 95% of all actual loan approvals. From the weighted average column, we can see the overall accuracy of the model is 0.80, meaning that the model correctly predicts loan eligibility 80% of the time.</p>
+<p>From the classification report, we can see that the false precision is 0.82. Meaning that when the model predicts a loan will be denied, it is correct 82.0% of the time. The recall is 0.47, meaning that the model correctly identifies 47.0% of all actual loan denials. The true precision is 0.8, meaning that when the model predicts a loan will be approved, it is correct 80.0% of the time. The recall is 0.95, meaning that the model correctly identifies 95.0% of all actual loan approvals. From the weighted average column, we can see the overall accuracy of the model is 0.8, meaning that the model correctly predicts loan eligibility 80.0% of the time.</p>
 </section>
 <section id="precision-recall-curve" class="level4">
 <h4 class="anchored" data-anchor-id="precision-recall-curve">Precision Recall Curve</h4>
@@ -186,7 +186,7 @@ Figure&nbsp;3: ROC Curve
 </figcaption>
 </figure>
 </div>
-<p>We can see from the ROC curve and the AUC score of 0.80 that the model has good ability to distinguish between approved and denied loan applications. The score suggests that while the model is effective at distinguishing between the two classes, there is still room for improvement for its predictive performance.</p>
+<p>We can see from the ROC curve and the AUC score of 0.8 that the model has good ability to distinguish between approved and denied loan applications. The score suggests that while the model is effective at distinguishing between the two classes, there is still room for improvement for its predictive performance.</p>
 </section>
 </section>
 <section id="references" class="level1">
