report changed to doc for testing github pages

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; url=report/loan-analysis.html">
+    <meta http-equiv="refresh" content="0; url=reports/loan-analysis.html">
     <title>Loan Eligibility Prediction Analysis</title>
     <style>
         body {
@@ -71,10 +71,10 @@
 
 <body>
     <div class="container">
-        <h1>🏦 Loan Eligibility Prediction Analysis</h1>
-        <p>Redirecting to the analysis report...</p>
+        <h1>Loan Eligibility Prediction Analysis</h1>
+        <p>Redirecting to the analysis reports...</p>
         <div class="spinner"></div>
-        <p><a href="report/loan-analysis.html">Click here if not redirected automatically</a></p>
+        <p><a href="reports/loan-analysis.html">Click here if not redirected automatically</a></p>
     </div>
 </body>
 
